Phase 2 C2a-5 : RUNTIME JRE embarqué (zéro-install) — jlink dans le bundle + run.sh le préfère
Objectif clé-en-main : un joueur lambda lance le bundle sans installer Java.

BuildManager.packageRuntime : jlink un JRE minimal (~69 Mo, constante JRE_MODULES)
dans <bundle>/runtime/jre. Le set de modules = base jdeps + les modules chargés
par réflexion/ServiceLoader que jdeps ne voit pas, vérifiés empiriquement :
jdk.crypto.ec (Ed25519 de l'auth mnémonique) et jdk.httpserver (AuthService
com.sun.net.httpserver), + jdk.charsets/jdk.localedata/jdk.zipfs/jdk.xml.dom.
Appelé dans packageServer ET packageClient. run.sh/run.bat (serveur + client)
préfèrent runtime/jre/bin/java s'il existe, sinon repli sur le java système.

Vérifs (FAITS §8) :
  - JRE embarqué exécute le serveur : AuthMintTest OK (Ed25519+httpserver),
    ChestWireTest OK (.tab + LoginServer + drop tables).
  - JRE embarqué exécute le client lourd : hub COMPLET rendu (LWJGL/unidbg/spine
    jni) via runtime/jre/bin/java.
  - ServerBundleTest 11/11 (+2 assertions) : bundle généré (jlink inclus) lance le
    serveur SUR le JRE embarqué hors dev, port de jeu en écoute. ClientBundleTest
    (hors régression) : +1 assertion JRE.

Limite honnête (§2, tracée) : jlink ne cross-compile pas sans les jmods de l'OS
cible → le JRE embarqué est celui de l'OS de build (bundle Linux → JRE Linux pour
run.sh ; bundle Windows nécessite un build Windows). Si jlink indispo/échoue,
packageRuntime log et continue (bundle lançable avec le java système). Le port
CLIENT PC est 100% autonome ; reste côté serveur la dépendance python3 du
content-server (embarquer OU porter en Java).

Correctif régression annexe : SigninMultiDayTest échouait le 2026-08-31 (bord de
mois — le calendrier du sign-in mensuel bascule le 31). Fix déterministe
(précédent WarSchedulerTest) : pinClockToMidMonth ancre TimeUtil.serverTimeNow()
au 15 du mois (champ privé CLOCK_OFFSET) → test date-indépendant, sémantique
inchangée. Régression 170/170.

Co-Authored-By: C